--- a/#src/scss/components/download.scss
+++ b/#src/scss/components/download.scss
@@ -12,7 +12,8 @@
         .card {
             max-width: 283px;
             width: 100%;
-            margin: 0 5px;;
+            margin: 0 5px;
+            ;
             border-radius: 5px;
             box-shadow: 0px 10px 40px 0px $hoverCards;
             text-align: center;
@@ -67,19 +68,25 @@
         }
     }
 }
+
 @media screen and(max-width:1080px) {
     .download__inner {
         .download__cards {
             margin: 50px auto;
+
             .card {
-                &:first-child, &:nth-child(2), &:last-child {
+
+                &:first-child,
+                &:nth-child(2),
+                &:last-child {
                     margin-top: 50px;
                 }
             }
         }
     }
-    
+
 }
+
 @media screen and(max-width: 600px) {
     .download__inner {
         padding: 0;
@@ -94,11 +101,24 @@
             justify-content: center;
 
             .card {
-                &:first-child, &:nth-child(2), &:last-child {
+
+                &:first-child,
+                &:nth-child(2),
+                &:last-child {
                     margin-top: 50px;
                 }
             }
         }
     }
 
+}
+
+@media(hover: hover) and (pointer: fine) {
+
+    .btn:hover {
+        transition: .2s;
+        background-color: $white;
+        color: $accentColor;
+        cursor: pointer;
+    }
 }
